# review-agent

./: Containerfile  README.md  pyproject.toml
deploy/: imagestream.yaml  openshift.yaml
deploy/tekton/: pipeline.yaml  task-build-push.yaml  task-git-clone.yaml
src/review_agent/: __init__.py  __main__.py  config.py  git_repo.py  github_client.py  issue_refs.py  json_util.py  main.py  mcp_github.py  state_store.py
