[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-agent"
version = "0.1.0"
description = "Review: poll target-branch PRs → Llama Stack + MCP → merge when specs match linked issue"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-stack-client>=0.3.0",
    "GitPython>=3.1.40",
    "pydantic-settings>=2.2.0",
]

[project.scripts]
review-agent = "review_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
